lost modal close button and prev and next button but5 fixed box alignment and columns

--- a/CSS/styles_one_page_project.css
+++ b/CSS/styles_one_page_project.css
@@ -4,6 +4,34 @@ body {
     color:peachpuff;
 }
 
+#Stellar-Img_Container {
+    position:relative;
+    top:0;
+    left:0;
+    width: 100%;
+    height:auto;
+    z-index:-1;
+}
+
+#Stellar-Img_Container img {
+    position:relative;
+    width:100%;
+    height:auto;
+}
+
+.introTextContainer {
+    position:relative;
+    top:0;
+    left:0;
+    color:peachpuff;
+    z-index: 2;
+
+.introText {
+    position:absolute;
+
+}
+
+
 .Navigation{
     position:fixed;
     top:0;
@@ -33,6 +61,18 @@ a.active {
     background-color:orchid;
 }
 
+.introTextOverlay h1 p {
+    position:relative;
+    top:15%;
+    left:15%;
+}
+
+
+/*#About {*/
+/*    position:;*/
+
+
+
 
 .grid {
     display: grid;
@@ -46,6 +86,8 @@ a.active {
     background-color:rgb(39, 33, 77);
    margin-bottom:5%;
 }
+
+
 
 
 
